correções e ajustes nas telas

--- a/pages/academico/cursos--editar.html
+++ b/pages/academico/cursos--editar.html
@@ -162,6 +162,104 @@
                   </textarea>
                 </div>
               </div>
+              <div class="row mt-lg">
+                <div class="col-sm-12">
+                  <section class="box-typical">
+                    <header class="box-typical-header header-bordered">
+                      <div class="tbl-row">
+                        <div class="tbl-cell tbl-cell-title">
+                          <h5 class="semibold"><i class="fa fa-money mr-xs" aria-hidden="true"></i> Valores
+                          </h5>
+                        </div>
+                        <div class="tbl-cell tbl-cell-action-bordered">
+                          <form>
+                            <button type="submit" class="action-btn" data-toggle="modal"
+                                    data-target="#ModalValores"><i
+                                    class="fa fa-plus-circle mr-xs"></i>Adicionar
+                            </button>
+                          </form>
+                        </div>
+                      </div>
+                    </header>
+                    <div class="card-block">
+                      <div class="table-responsive">
+                        <table class="table table-hover">
+                          <thead>
+                          <tr>
+                            <th>Data início</th>
+                            <th>Data fim</th>
+                            <th>Situação</th>
+                            <th>Valor</th>
+                            <th class="text-right">Ações</th>
+                          </tr>
+                          </thead>
+                          <tbody>
+                          <tr class="table-active-next">
+                            <td>00/00/0000</td>
+                            <td>00/00/0000</td>
+                            <td>Ativo</td>
+                            <td>R$450,00</td>
+                            <td class="text-right">
+                              <div class="btn-group btn-group-sm pull-right">
+                                <button type="button" class="btn btn-default-outline dropdown-toggle"
+                                        data-toggle="dropdown"
+                                        aria-haspopup="true" aria-expanded="false">Ações
+                                </button>
+                                <div class="dropdown-menu">
+                                  <a class="dropdown-item" data-toggle="modal"
+                                     data-target="#ModalValores"><i
+                                          class="fa fa-pencil-square-o mr-xs"
+                                          aria-hidden="true"></i>
+                                    Editar</a>
+                                  <div class="dropdown-divider"></div>
+                                  <a class="dropdown-item" href="#"><i class="fa fa-ban mr-xs"
+                                                                       aria-hidden="true"></i>
+                                    Remover</a>
+                                </div>
+                              </div>
+                            </td>
+                          </tr>
+                          <tr class="table-active-visual">
+                            <td>00/00/0000</td>
+                            <td>00/00/0000</td>
+                            <td>Ativo</td>
+                            <td>R$450,00</td>
+                            <td class="text-right">
+                              <div class="btn-group btn-group-sm pull-right">
+                                <button type="button" class="btn btn-default-outline dropdown-toggle"
+                                        data-toggle="dropdown"
+                                        aria-haspopup="true" aria-expanded="false">Ações
+                                </button>
+                                <div class="dropdown-menu">
+                                  <a class="dropdown-item" data-toggle="modal"
+                                     data-target="#ModalValores"><i
+                                          class="fa fa-pencil-square-o mr-xs"
+                                          aria-hidden="true"></i>
+                                    Editar</a>
+                                  <div class="dropdown-divider"></div>
+                                  <a class="dropdown-item" href="#"><i class="fa fa-ban mr-xs"
+                                                                       aria-hidden="true"></i>
+                                    Remover</a>
+                                </div>
+                              </div>
+                            </td>
+                          </tr>
+                          <tr class="table-inactive">
+                            <td>00/00/0000</td>
+                            <td>00/00/0000</td>
+                            <td>Ativo</td>
+                            <td>R$450,00</td>
+                            <td class="text-right">
+                            </td>
+                          </tr>
+
+                          </tbody>
+                        </table>
+                      </div>
+                    </div>
+                  </section>
+                </div>
+              </div>
               <div class="row divider-top">
                 <div class="col-sm-12">
                   <div class="row">
@@ -279,108 +377,7 @@
                 </div>
               </div>
 
-              <div class="row mt-md">
-                <div class="col-sm-12">
-                  <section class="box-typical">
-                    <header class="box-typical-header header-bordered">
-                      <div class="tbl-row">
-                        <div class="tbl-cell tbl-cell-title">
-                          <h5 class="semibold"><i class="fa fa-money mr-xs" aria-hidden="true"></i> Valores
-                          </h5>
-                        </div>
-                        <div class="tbl-cell tbl-cell-action-bordered">
-                          <form>
-                            <button type="submit" class="action-btn" data-toggle="modal"
-                                    data-target="#ModalValores"><i
-                                    class="fa fa-plus-circle mr-xs"></i>Adicionar
-                            </button>
-                          </form>
-                        </div>
-                      </div>
-                    </header>
-                    <div class="card-block">
-                      <div class="table-responsive">
-                        <table class="table table-hover">
-                          <thead>
-                          <tr>
-                            <th>Data início</th>
-                            <th>Data fim</th>
-                            <th>Situação</th>
-                            <th>Valor</th>
-                            <th>Observação</th>
-                            <th class="text-right">Ações</th>
-                          </tr>
-                          </thead>
-                          <tbody>
-                          <tr class="table-active-next">
-                            <td>00/00/0000</td>
-                            <td>00/00/0000</td>
-                            <td>Ativo</td>
-                            <td>R$450,00</td>
-                            <td>Alteração por reajuste inflacionário </td>
-                            <td class="text-right">
-                              <div class="btn-group btn-group-sm pull-right">
-                                <button type="button" class="btn btn-default-outline dropdown-toggle"
-                                        data-toggle="dropdown"
-                                        aria-haspopup="true" aria-expanded="false">Ações
-                                </button>
-                                <div class="dropdown-menu">
-                                  <a class="dropdown-item" data-toggle="modal"
-                                     data-target="#ModalValores"><i
-                                          class="fa fa-pencil-square-o mr-xs"
-                                          aria-hidden="true"></i>
-                                    Editar</a>
-                                  <div class="dropdown-divider"></div>
-                                  <a class="dropdown-item" href="#"><i class="fa fa-ban mr-xs"
-                                                                       aria-hidden="true"></i>
-                                    Remover</a>
-                                </div>
-                              </div>
-                            </td>
-                          </tr>
-                          <tr class="table-active-visual">
-                            <td>00/00/0000</td>
-                            <td>00/00/0000</td>
-                            <td>Ativo</td>
-                            <td>R$450,00</td>
-                            <td>Alteração por reajuste inflacionário </td>
-                            <td class="text-right">
-                              <div class="btn-group btn-group-sm pull-right">
-                                <button type="button" class="btn btn-default-outline dropdown-toggle"
-                                        data-toggle="dropdown"
-                                        aria-haspopup="true" aria-expanded="false">Ações
-                                </button>
-                                <div class="dropdown-menu">
-                                  <a class="dropdown-item" data-toggle="modal"
-                                     data-target="#ModalValores"><i
-                                          class="fa fa-pencil-square-o mr-xs"
-                                          aria-hidden="true"></i>
-                                    Editar</a>
-                                  <div class="dropdown-divider"></div>
-                                  <a class="dropdown-item" href="#"><i class="fa fa-ban mr-xs"
-                                                                       aria-hidden="true"></i>
-                                    Remover</a>
-                                </div>
-                              </div>
-                            </td>
-                          </tr>
-                          <tr class="table-inactive">
-                            <td>00/00/0000</td>
-                            <td>00/00/0000</td>
-                            <td>Ativo</td>
-                            <td>R$450,00</td>
-                            <td>Alteração por reajuste inflacionário </td>
-                            <td class="text-right">
-                            </td>
-                          </tr>
 
-                          </tbody>
-                        </table>
-                      </div>
-                    </div>
-                  </section>
-                </div>
-              </div>
               <div class="row divider-top">
                 <div class="col-sm-12">
                   <button id="notie-success" type="button" class="btn btn-primary btn-success"><i
@@ -603,12 +600,15 @@
             <input type="number" class="form-control" aria-label="" placeholder="Valor">
           </div>
           <div class="col-md-6">
-            <label class="form-label semibold" for="">Vigência</label>
+            <label class="form-label semibold" for="">Período de vigência</label>
             <div class="row">
               <div class="col-sm-6">
                 <input id="datetimepicker-inicial" type="text" value="" class="form-control" placeholder="Selecione a data inicial">
               </div>
-              <div class="col-sm-6">
+              <div class="col-sm-1 text-center">
+                <p class="mt-sm">à</p>
+              </div>
+              <div class="col-sm-5">
                 <input id="datetimepicker-final" type="text" value="" class="form-control" placeholder="Selecione a data final">
               </div>
             </div>
