--- a/pages/academico/niveis.html
+++ b/pages/academico/niveis.html
@@ -817,9 +817,9 @@
                   </div>
                   <div class="col-sm-4">
                     <fieldset class="form-group">
-                      <label class="form-label semibold" for="">Nome do nível <span
+                      <label class="form-label semibold" for="">Nome<span
                               class="semibold text-danger h4">*</span></label>
-                      <input type="text" class="form-control" id="" placeholder="Nome do nível">
+                      <input type="text" class="form-control" id="" placeholder="Nome">
                     </fieldset>
                   </div>
                   <div class="col-sm-4">
