--- a/pages/posto/unidade--editar.html
+++ b/pages/posto/unidade--editar.html
@@ -200,6 +200,7 @@
                             <option>Selecione</option>
                             <option>Principal</option>
                             <option>Comercial</option>
+                            <option>Outros</option>
                           </select>
                         </div>
                         <div class="col-sm-7">
