--- a/pages/posto/unidade.html
+++ b/pages/posto/unidade.html
@@ -98,7 +98,7 @@
                           <input type="text" class="form-control" aria-label="" placeholder="Nome da unidade">
                         </div>
                         <div class="col-sm-4">
-                          <label class="form-label semibold" for="">Status</label>
+                          <label class="form-label semibold" for="">Situação</label>
                           <div class="form-group">
                             <div class="btn-group btn-group-sm" data-toggle="buttons">
                               <label class="btn btn-secondary active">
@@ -367,6 +367,7 @@
                             <option>Selecione</option>
                             <option>Principal</option>
                             <option>Comercial</option>
+                            <option>Outros</option>
                           </select>
                         </div>
                         <div class="col-sm-7">
