--- a/pages/posto/posto--editar.html
+++ b/pages/posto/posto--editar.html
@@ -213,6 +213,7 @@
                             <option>Selecione</option>
                             <option>Principal</option>
                             <option>Comercial</option>
+                            <option>Outros</option>
                           </select>
                         </div>
                         <div class="col-sm-7">
