--- a/pages/academico/cursos.html
+++ b/pages/academico/cursos.html
@@ -491,7 +491,8 @@
                                         aria-haspopup="true" aria-expanded="false">Ações
                                 </button>
                                 <div class="dropdown-menu">
-                                  <a class="dropdown-item" href="posto--editar.html"><i
+                                  <a class="dropdown-item" data-toggle="modal"
+                                     data-target="#ModalValores"><i
                                           class="fa fa-pencil-square-o mr-xs"
                                           aria-hidden="true"></i>
                                     Editar</a>
@@ -516,7 +517,8 @@
                                         aria-haspopup="true" aria-expanded="false">Ações
                                 </button>
                                 <div class="dropdown-menu">
-                                  <a class="dropdown-item" href="posto--editar.html"><i
+                                  <a class="dropdown-item" data-toggle="modal"
+                                     data-target="#ModalValores"><i
                                           class="fa fa-pencil-square-o mr-xs"
                                           aria-hidden="true"></i>
                                     Editar</a>
@@ -537,7 +539,6 @@
                             <td class="text-right">
                             </td>
                           </tr>
-
                           </tbody>
                         </table>
                       </div>
