--- a/pages/posto/posto--editar.html
+++ b/pages/posto/posto--editar.html
@@ -200,70 +200,125 @@
                       </select>
                     </div>
                   </div>
-                  <div class="row mt-md">
-                    <div class="col-sm-7">
-                      <div class="row">
-                        <div class="col-sm-12 mb-md">
-                          <label class="form-label semibold" for=""><i class="fa fa-phone mr-xs" aria-hidden="true"></i>
-                            Telefones</label>
-                        </div>
-                        <div class="col-sm-5">
-                          <label class="form-label semibold" for="">Tipo</label>
-                          <select class="select2 select2-arrow">
-                            <option>Selecione</option>
-                            <option>Principal</option>
-                            <option>Comercial</option>
-                            <option>Outros</option>
-                          </select>
-                        </div>
-                        <div class="col-sm-7">
-                          <label class="form-label semibold" for="">Número</label>
-                          <div class="input-group">
-                            <input type="number" class="form-control" placeholder="Número">
-                        <span class="input-group-btn">
-                          <button class="btn btn-success-outline" type="button"><i class="fa fa-plus"
-                                                                                   aria-hidden="true"></i>
-                          </button>
-                        </span>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-sm-5">
-                      <label class="form-label semibold" for="">Telefones cadastrados</label>
-                      <table class="table">
-                        <thead>
-                        <tr>
-                          <th>Tipo</th>
-                          <th>Número</th>
-                          <th></th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                          <td>Principal</td>
-                          <td>(61) 0000-0000</td>
-                          <td>
-                            <button type="button" class="btn btn-danger-outline btn-sm"><i
-                                    class="fa fa-times"
-                                    aria-hidden="true"></i></button>
-                          </td>
-                        </tr>
-                        <tr>
-                          <td>Comercial</td>
-                          <td>(61) 0000-0000</td>
-                          <td>
-                            <button type="button" class="btn btn-danger-outline btn-sm"><i
-                                    class="fa fa-times"
-                                    aria-hidden="true"></i></button>
-                          </td>
-                        </tr>
-                        </tbody>
-                      </table>
-                    </div>
-                  </div>
+
                 </div>
               </section>
+              <div class="row mt-lg">
+                <div class="col-sm-12">
+                  <section class="box-typical">
+                    <header class="box-typical-header header-bordered">
+                      <div class="tbl-row">
+                        <div class="tbl-cell tbl-cell-title">
+                          <h5 class="semibold"><i class="fa fa-phone" aria-hidden="true"></i> Telefones
+                          </h5>
+                        </div>
+                        <div class="tbl-cell tbl-cell-action-bordered">
+                          <form>
+                            <button type="submit" class="action-btn" data-toggle="modal"
+                                    data-target="#ModalContatosPosto"><i
+                                    class="fa fa-plus-circle mr-xs"></i>Adicionar
+                            </button>
+                          </form>
+                        </div>
+                      </div>
+                    </header>
+                    <div class="card-block">
+                      <div class="table-responsive">
+                        <table class="table table-hover">
+                          <thead>
+                          <tr>
+                            <th>Nome</th>
+                            <th>Telefone(s) / E-mail</th>
+                            <th>Observações</th>
+                            <th class="text-right">Ações</th>
+                          </tr>
+                          </thead>
+                          <tbody>
+                          <tr>
+                            <td><p>Luan Almeida Barbosa</p></td>
+                            <td>
+                              <ul class="chart-legend-list">
+                                <li>
+                                  <div class="dot blue"></div>
+                                  (00) 0000-0000
+                                </li>
+                                <li>
+                                  <div class="dot blue"></div>
+                                  (00) 0000-0000
+                                </li>
+                              </ul>
+                              <p class="divider-top pb-sm">E-mail: luan.almeida@email.com.br</p>
+                            </td>
+                            <td>
+
+                              <p>Observações:
+                                <br>Gerente do posto, atendimento das 14h00 ás 22h00</p></td>
+                            <td class="text-right">
+                              <div class="btn-group btn-group-sm pull-right">
+                                <button type="button" class="btn btn-default-outline dropdown-toggle"
+                                        data-toggle="dropdown"
+                                        aria-haspopup="true" aria-expanded="false">Ações
+                                </button>
+                                <div class="dropdown-menu">
+                                  <a class="dropdown-item" data-toggle="modal"
+                                     data-target="#ModalContatosPosto"><i
+                                          class="fa fa-pencil-square-o mr-xs"
+                                          aria-hidden="true"></i>
+                                    Editar</a>
+                                  <div class="dropdown-divider"></div>
+                                  <a class="dropdown-item" href="#"><i class="fa fa-ban mr-xs"
+                                                                       aria-hidden="true"></i>
+                                    Excluir</a>
+                                </div>
+                              </div>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td><p>Iranyr Almeida Barbosa</p></td>
+                            <td>
+                              <ul class="chart-legend-list">
+                                <li>
+                                  <div class="dot blue"></div>
+                                  (00) 0000-0000
+                                </li>
+                                <li>
+                                  <div class="dot blue"></div>
+                                  (00) 0000-0000
+                                </li>
+                              </ul>
+                              <p class="divider-top pb-sm">E-mail: luan.almeida@email.com.br</p>
+                            </td>
+                            <td>
+
+                              <p>Observações:
+                                <br>Gerente do posto, atendimento das 14h00 ás 22h00</p></td>
+                            <td class="text-right">
+                              <div class="btn-group btn-group-sm pull-right">
+                                <button type="button" class="btn btn-default-outline dropdown-toggle"
+                                        data-toggle="dropdown"
+                                        aria-haspopup="true" aria-expanded="false">Ações
+                                </button>
+                                <div class="dropdown-menu">
+                                  <a class="dropdown-item" data-toggle="modal"
+                                     data-target="#ModalContatosPosto"><i
+                                          class="fa fa-pencil-square-o mr-xs"
+                                          aria-hidden="true"></i>
+                                    Editar</a>
+                                  <div class="dropdown-divider"></div>
+                                  <a class="dropdown-item" href="#"><i class="fa fa-ban mr-xs"
+                                                                       aria-hidden="true"></i>
+                                    Excluir</a>
+                                </div>
+                              </div>
+                            </td>
+                          </tr>
+                          </tbody>
+                        </table>
+                      </div>
+                    </div>
+                  </section>
+                </div>
+              </div>
 
               <div class="row divider-top pb-md">
                 <div class="col-sm-12">
@@ -429,6 +484,100 @@
     </div>
   </div>
 </div>
+
+
+
+
+<div class="modal fade" id="ModalContatosPosto" tabindex="-1" role="dialog" aria-labelledby="ModalContatosPosto">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Contatos do posto avançado</h4>
+      </div>
+      <div class="modal-body">
+        <div class="row">
+          <div class="col-sm-6">
+            <label class="form-label semibold" for="">Nome</label>
+            <input type="text" class="form-control" aria-label="" placeholder="Nome">
+          </div>
+          <div class="col-sm-6">
+            <label class="form-label semibold" for="">E-mail</label>
+            <input type="email" class="form-control" aria-label="" placeholder="E-mail">
+          </div>
+        </div>
+        <div class="row mt-md">
+          <div class="col-sm-12">
+            <label class="form-label semibold" for="">Observações</label>
+            <textarea rows="4" class="form-control" placeholder="Observações"></textarea>
+          </div>
+        </div>
+        <section class="card card-default mt-md">
+          <header class="card-header">
+            <h5 class="semibold"><i class="fa fa-phone mr-xs" aria-hidden="true"></i> Telefones
+            </h5>
+          </header>
+          <div class="card-block">
+            <div class="row">
+              <div class="col-sm-7 mt-xl">
+                <div class="row">
+                  <div class="col-sm-5">
+                    <label class="form-label semibold" for="">Tipo</label>
+                    <select class="select2 select2-arrow">
+                      <option>Selecione</option>
+                      <option>Principal</option>
+                      <option>Comercial</option>
+                      <option>Outros</option>
+                    </select>
+                  </div>
+                  <div class="col-sm-7">
+                    <label class="form-label semibold" for="">Número</label>
+                    <div class="input-group">
+                      <input type="number" class="form-control" placeholder="Número">
+                        <span class="input-group-btn">
+                          <button class="btn btn-success-outline" type="button"><i class="fa fa-plus"
+                                                                                   aria-hidden="true"></i>
+                          </button>
+                        </span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-5">
+                <label class="form-label semibold" for="">Telefones cadastrados</label>
+                <table class="table">
+                  <thead>
+                  <tr>
+                    <th>Tipo</th>
+                    <th>Número</th>
+                  </tr>
+                  </thead>
+                  <tbody>
+                  <tr>
+                    <td>Principal</td>
+                    <td>(61) 0000-0000</td>
+                  </tr>
+                  <tr>
+                    <td>Comercial</td>
+                    <td>(61) 0000-0000</td>
+                  </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-dismiss="modal">Ok</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
 
 
 <script src="../../js/lib/jquery/jquery.min.js"></script>
