--- a/pages/posto/posto.html
+++ b/pages/posto/posto.html
@@ -639,17 +639,16 @@
                     <div class="card-block">
                       <div class="table-responsive">
                         <table class="table table-hover">
-                          <thead class="hidden-iten">
+                          <thead>
                           <tr>
                             <th>Nome</th>
-                            <th>Telefone(s)</th>
-                            <th>E-mail</th>
+                            <th>Telefone(s) / E-mail</th>
                             <th>Observações</th>
                             <th class="text-right">Ações</th>
                           </tr>
                           </thead>
                           <tbody>
-                          <tr class="row-b-t-0">
+                          <tr>
                             <td><p>Luan Almeida Barbosa</p></td>
                             <td>
                               <ul class="chart-legend-list">
@@ -664,7 +663,6 @@
                               </ul>
                               <p class="divider-top pb-sm">E-mail: luan.almeida@email.com.br</p>
                             </td>
-                            <td></td>
                             <td>
 
                               <p>Observações:
@@ -676,7 +674,8 @@
                                         aria-haspopup="true" aria-expanded="false">Ações
                                 </button>
                                 <div class="dropdown-menu">
-                                  <a class="dropdown-item" href="posto--editar.html"><i
+                                  <a class="dropdown-item" data-toggle="modal"
+                                     data-target="#ModalContatosPosto"><i
                                           class="fa fa-pencil-square-o mr-xs"
                                           aria-hidden="true"></i>
                                     Editar</a>
@@ -703,7 +702,6 @@
                               </ul>
                               <p class="divider-top pb-sm">E-mail: luan.almeida@email.com.br</p>
                             </td>
-                            <td></td>
                             <td>
 
                               <p>Observações:
@@ -715,7 +713,8 @@
                                         aria-haspopup="true" aria-expanded="false">Ações
                                 </button>
                                 <div class="dropdown-menu">
-                                  <a class="dropdown-item" href="posto--editar.html"><i
+                                  <a class="dropdown-item" data-toggle="modal"
+                                     data-target="#ModalContatosPosto"><i
                                           class="fa fa-pencil-square-o mr-xs"
                                           aria-hidden="true"></i>
                                     Editar</a>
