Ajustes em curso e níveis

--- a/pages/academico/niveis.html
+++ b/pages/academico/niveis.html
@@ -102,7 +102,7 @@
                           </div>
                         </div>
                         <div class="row divider-top">
-                          <div class="col-sm-6">
+                          <div class="col-sm-4">
                             <label class="form-label semibold" for="">Material Didático a definir</label>
                             <div class="form-group">
                               <div class="btn-group btn-group-sm" data-toggle="buttons">
@@ -119,7 +119,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="col-sm-6">
+                          <div class="col-sm-4">
                             <label class="form-label semibold" for="">Situação</label>
                             <div class="form-group">
                               <div class="btn-group btn-group-sm" data-toggle="buttons">
@@ -132,6 +132,23 @@
                                 </label>
                                 <label class="btn btn-secondary-outline">
                                   <input type="radio" name="options" id="option2" autocomplete="off"> Inativos
+                                </label>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-sm-4">
+                            <label class="form-label semibold" for="">Pendente</label>
+                            <div class="form-group">
+                              <div class="btn-group btn-group-sm" data-toggle="buttons">
+                                <label class="btn btn-secondary-outline active">
+                                  <input type="radio" name="options" id="option3" autocomplete="off" checked="">
+                                  Todos
+                                </label>
+                                <label class="btn btn-secondary-outline">
+                                  <input type="radio" name="options" id="option1" autocomplete="off"> Sim
+                                </label>
+                                <label class="btn btn-secondary-outline">
+                                  <input type="radio" name="options" id="option2" autocomplete="off"> Não
                                 </label>
                               </div>
                             </div>
