--- a/pages/academico/cursos.html
+++ b/pages/academico/cursos.html
@@ -614,8 +614,8 @@
                   pendente</strong></p>
               </div>
               <div class="col-md-4">
-                <label class="form-label semibold">Clasifficação</label>
-                <p>Único</p>
+                <label class="form-label semibold">Níveis</label>
+                <p>Nível Único</p>
               </div>
             </div>
             <div class="row mt-lg">
