Ajustes em níveis

--- a/pages/academico/cursos.html
+++ b/pages/academico/cursos.html
@@ -111,7 +111,7 @@
                           </select>
                         </div>
                         <div class="col-sm-4">
-                          <label class="form-label semibold" for="">Pendentes</label>
+                          <label class="form-label semibold" for="">Pendente</label>
                           <div class="form-group">
                             <div class="btn-group btn-group-sm" data-toggle="buttons">
                               <label class="btn btn-secondary-outline active">
@@ -614,8 +614,8 @@
                   pendente</strong></p>
               </div>
               <div class="col-md-4">
-                <label class="form-label semibold">Níveis</label>
-                <p>Nível Único</p>
+                <label class="form-label semibold">Multinível</label>
+                <p>Sim</p>
               </div>
             </div>
             <div class="row mt-lg">
