--- a/pages/academico/niveis--editar.html
+++ b/pages/academico/niveis--editar.html
@@ -110,7 +110,7 @@
                 </div>
                 <div class="row divider-top pb-md">
                   <div class="col-sm-3">
-                    <label class="form-label semibold" for=""> Quatidade de unidades <span
+                    <label class="form-label semibold" for=""> Quantidade de unidades <span
                             class="semibold text-danger h4">*</span></label>
                     <input type="number" class="form-control" id="" value="3">
                   </div>
@@ -124,6 +124,12 @@
                     <div class="checkbox-toggle mt-lg">
                       <input type="checkbox" id="check-Certificado" checked>
                       <label for="check-Certificado">Certificado</label>
+                    </div>
+                  </div>
+                  <div class="col-sm-3">
+                    <div class="checkbox-toggle mt-lg">
+                      <input type="checkbox" id="check-matOb" checked>
+                      <label for="check-matOb">Material didático obrigatório</label>
                     </div>
                   </div>
                 </div>
@@ -246,7 +252,7 @@
           <div class="card-block">
             <div class="row">
               <div class="col-md-2">
-                <label class="form-label semibold">Unidades</label>
+                <label class="form-label semibold">Quantidade de unidades avaliativas</label>
                 <p>0000</p>
               </div>
               <div class="col-md-6">
