--- a/pages/academico/niveis.html
+++ b/pages/academico/niveis.html
@@ -79,7 +79,7 @@
                         <div class="row">
                           <div class="col-sm-6">
                             <fieldset class="form-group mb-0">
-                              <label class="form-label semibold" for="">Qtd. de unidades avaliativas</label>
+                              <label class="form-label semibold" for="">Quantidade de unidades avaliativas</label>
                               <input type="text" class="form-control" id="" placeholder="000">
                             </fieldset>
                           </div>
@@ -840,7 +840,7 @@
                     </fieldset>
                   </div>
                   <div class="col-sm-4">
-                    <label class="form-label semibold" for=""> Qtd. de unidades avaliativas<span
+                    <label class="form-label semibold" for="">Quantidade de unidades avaliativas<span
                             class="semibold text-danger h4">*</span></label>
                     <input type="number" class="form-control" id="" placeholder="00">
                   </div>
@@ -974,7 +974,7 @@
           <div class="card-block">
             <div class="row">
               <div class="col-md-4">
-                <label class="form-label semibold">Qtd. de unidades avaliativas</label>
+                <label class="form-label semibold">Quantidade de unidades avaliativas</label>
                 <p>0000</p>
               </div>
               <div class="col-md-4">
