Ajuste em unidade

--- a/pages/posto/unidade--editar.html
+++ b/pages/posto/unidade--editar.html
@@ -97,7 +97,8 @@
                 <div class="card-block">
                   <div class="row">
                     <div class="col-sm-4">
-                      <label class="form-label semibold" for="">Unidade</label>
+                      <label class="form-label semibold" for="">Unidade <span
+                              class="semibold text-danger h4">*</span></label>
                       <select class="select2 select2-arrow">
                         <option>Selecione</option>
                        	<option selected>Águas claras</option>
