--- a/pages/posto/unidade--editar.html
+++ b/pages/posto/unidade--editar.html
@@ -168,7 +168,8 @@
                 <div class="card-block">
                   <div class="row">
                     <div class="col-sm-12">
-                      <label class="form-label semibold" for="">Responsável pedagógico</label>
+                      <label class="form-label semibold" for="">Responsável pedagógico <span
+                              class="semibold text-danger h4">*</span></label>
                       <select class="select2 select2-arrow">
                         <option>Selecione</option>
                         <option selected>Vânia Rodrigues</option>
