Ajuste em posto

--- a/pages/posto/posto--editar.html
+++ b/pages/posto/posto--editar.html
@@ -169,7 +169,7 @@
                 </div>
               </section>
 
-              <section class="card card-default mt-lg">
+              <section class="card card-default mt-md">
                 <header class="card-header">
                   <h5 class="semibold"><i class="fa fa-commenting mr-xs" aria-hidden="true"></i> Contatos
                   </h5>
@@ -203,7 +203,7 @@
 
                 </div>
               </section>
-              <div class="row mt-lg">
+              <div class="row mt-md">
                 <div class="col-sm-12">
                   <section class="box-typical">
                     <header class="box-typical-header header-bordered">
@@ -428,7 +428,7 @@
           </div>
         </section>
 
-        <section class="card card-default mt-lg">
+        <section class="card card-default mt-md">
           <header class="card-header">
             <h5 class="semibold"><i class="fa fa-commenting mr-xs" aria-hidden="true"></i> Contatos
             </h5>
