--- a/pages/posto/posto.html
+++ b/pages/posto/posto.html
@@ -583,7 +583,7 @@
                 </div>
               </section>
 
-              <section class="card card-default mt-lg">
+              <section class="card card-default mt-md">
                 <header class="card-header">
                   <h5 class="semibold"><i class="fa fa-commenting mr-xs" aria-hidden="true"></i> Contatos
                   </h5>
@@ -617,7 +617,7 @@
                 </div>
               </section>
 
-              <div class="row mt-lg">
+              <div class="row mt-md">
                 <div class="col-sm-12">
                   <section class="box-typical">
                     <header class="box-typical-header header-bordered">
@@ -929,7 +929,7 @@
           </div>
         </section>
 
-        <section class="card card-default mt-lg">
+        <section class="card card-default mt-md">
           <header class="card-header">
             <h5 class="semibold"><i class="fa fa-commenting mr-xs" aria-hidden="true"></i> Contatos
             </h5>
@@ -951,31 +951,75 @@
                 <p>Ana Souza Martins</p>
               </div>
             </div>
-            <div class="row mt-md">
-              <div class="col-sm-12">
-                <label class="form-label semibold" for="">Telefones cadastrados</label>
-                <table class="table mt-md">
-                  <thead>
-                  <tr>
-                    <th>Tipo</th>
-                    <th>Número</th>
-                  </tr>
-                  </thead>
-                  <tbody>
-                  <tr>
-                    <td>Principal</td>
-                    <td>(61) 9847-4670</td>
-                  </tr>
-                  <tr>
-                    <td>Comercial</td>
-                    <td>(61) 9847-4670</td>
-                  </tr>
-                  </tbody>
-                </table>
-              </div>
-            </div>
           </div>
         </section>
+        <div class="row mt-md">
+          <div class="col-sm-12">
+            <section class="box-typical">
+              <header class="box-typical-header header-bordered">
+                <div class="tbl-row">
+                  <div class="tbl-cell tbl-cell-title">
+                    <h5 class="semibold"><i class="fa fa-phone" aria-hidden="true"></i> Telefones
+                    </h5>
+                  </div>
+                </div>
+              </header>
+              <div class="card-block">
+                <div class="table-responsive">
+                  <table class="table table-hover">
+                    <thead>
+                    <tr>
+                      <th>Nome</th>
+                      <th>Telefone(s) / E-mail</th>
+                      <th>Observações</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                      <td><p>Luan Almeida Barbosa</p></td>
+                      <td>
+                        <ul class="chart-legend-list">
+                          <li>
+                            <div class="dot blue"></div>
+                            (00) 0000-0000
+                          </li>
+                          <li>
+                            <div class="dot blue"></div>
+                            (00) 0000-0000
+                          </li>
+                        </ul>
+                        <p class="divider-top pb-sm">E-mail: luan.almeida@email.com.br</p>
+                      </td>
+                      <td>
+                        <p>Observações:
+                          <br>Gerente do posto, atendimento das 14h00 ás 22h00</p></td>
+                    </tr>
+                    <tr>
+                      <td><p>Iranyr Almeida Barbosa</p></td>
+                      <td>
+                        <ul class="chart-legend-list">
+                          <li>
+                            <div class="dot blue"></div>
+                            (00) 0000-0000
+                          </li>
+                          <li>
+                            <div class="dot blue"></div>
+                            (00) 0000-0000
+                          </li>
+                        </ul>
+                        <p class="divider-top pb-sm">E-mail: luan.almeida@email.com.br</p>
+                      </td>
+                      <td>
+                        <p>Observações:
+                          <br>Gerente do posto, atendimento das 14h00 ás 22h00</p></td>
+                    </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </section>
+          </div>
+        </div>
 
 
       </div>
